# computeShaderAlgorithms

./: CMakeLists.txt  build.sh  setup.sh
src/: compute.cpp  compute.dispatch
